tests/golden/fixtures/syntax-native-imm-err/expected.err
Error: mnemonic 'sta' does not accept #immediate operand
   ╭─[ tests/golden/fixtures/syntax-native-imm-err/input.k65:7:9 ]
   │
 7 │         sta #$82
   │         ────┬───  
   │             ╰───── immediate operand
   │ 
   │ Help: `sta` writes a register to memory; drop the `#` and pass an address (`sta addr`), or load the value into a register first (`a = #$xx`) and then store it
   │ 
   │ Note: Store mnemonics on the W65C816 (`sta`/`stx`/`sty`/`stz`) only address memory; immediates have no destination, so the assembler refuses the `#` form.
───╯
